--- a/certifying-app-js/src/Service provider management.css
+++ b/certifying-app-js/src/Service provider management.css
@@ -2,7 +2,7 @@
 
 .fm-container {
   display: flex;
-  height: 100vh;
+  /* height: 310vh; */
   font-family: "Poppins", sans-serif;
   background: #f4f6ff00;
 }
